@@ -23,7 +23,11 @@
 // $Id$
 package net.infonode.util;
 
-import java.io.*;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
+import java.io.ObjectStreamException;
+import java.io.Serializable;
 import java.util.HashMap;
 
 /**
@@ -51,7 +55,7 @@ public class Enum implements Serializable, Writable {
       VALUE_MAP.put(getClass(), values);
     }
 
-    values.put(new Integer(value), this);
+    values.put(Integer.valueOf(value), this);
   }
 
   /**
@@ -72,7 +76,8 @@ public class Enum implements Serializable, Writable {
     return name;
   }
 
-  public String toString() {
+  @Override
+public String toString() {
     return name;
   }
 
@@ -86,7 +91,7 @@ public class Enum implements Serializable, Writable {
     if (map == null)
       throw new IOException("Invalid enum class '" + cl + "'!");
 
-    Object object = map.get(new Integer(value));
+    Object object = map.get(Integer.valueOf(value));
 
     if (object == null)
       throw new IOException("Invalid enum value '" + value + "'!");
